# ros_learning

ares_description/: CMakeLists.txt  package.xml
ares_description/config/: joint_names_ares_description.yaml
ares_description/launch/: ares_with_camera.launch  ares_with_gps.launch  ares_with_imu.launch  ares_with_kinect.launch  ares_with_laser.launch  display.launch  gazebo.launch
ares_description/scripts/: get_imu.py
ares_description/urdf/: ares_description.urdf  ares_description.xacro  ares_with_camera.xacro  ares_with_gps.xacro  ares_with_imu.xacro  ares_with_kinect.xacro  ares_with_laser.xacro
ares_description/urdf/sensors/: gps_gazebo.xacro  imu_gazebo.xacro  kinect_gazebo.xacro  lidar_gazebo.xacro
ares_description/worlds/: labyrinth.world  room_tunnel.world
ares_description/worlds/room/: model.sdf
ares_description/worlds/room2/: model.sdf
mbot_navigation/maps/: map.pgm
ros_urdf/marm_description/: package.xml
ros_urdf/marm_description/config/: marm_description.rviz
ros_urdf/marm_description/launch/: display_marm_urdf.launch
ros_urdf/mbot_description/: package.xml
ros_urdf/mbot_description/config/: mbot_urdf.rviz
ros_urdf/mbot_description/launch/: display_mbot_urdf.launch  display_mbot_with_kinect.launch  display_mbot_with_laser_urdf.launch
ros_urdf/mbot_description/urdf/: mbot_with_kinect.urdf  mbot_with_laser.urdf
